--- a/distribution/conf/application.properties
+++ b/distribution/conf/application.properties
@@ -170,8 +170,8 @@ nacos.istio.mcp.server.enabled=false
 
 ### Sets the Raft cluster election timeout, default value is 5 second
 # nacos.core.protocol.raft.data.election_timeout_ms=5000
-### Sets the amount of time the Raft snapshot will execute periodically, default is 30 minute
-# nacos.core.protocol.raft.data.snapshot_interval_secs=30
+### Sets the amount of time the Raft snapshot will execute periodically, default is 30 minute，unit(seconds)
+# nacos.core.protocol.raft.data.snapshot_interval_secs=1800
 ### raft internal worker threads
 # nacos.core.protocol.raft.data.core_thread_num=8
 ### Number of threads required for raft business request processing
